# test-pkg

./: LICENSE  pyproject.toml
src/josef_test_2024/: __init__.py  algorithm.py
