[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "josef-test-2024"
version = "0.0.1"
authors = [
  { name="Josef Hoppe", email="hoppe@cs.rwth-aachen.de" },
]
description = "Toolsday :-)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [ ]

[project.optional-dependencies]
test = [
  'pandas',
  'pytest-cov',
  'networkx'
]

[project.urls]
"Homepage" = "https://hoppe.io"

[tool.hatch.build]
exclude = ["examples", "readme_src"]

[tool.pytest.ini_options]
addopts = "-ra --cov --cov-report html --cov-report term-missing --cov-fail-under 75"
testpaths = [
    "tests",
    "tests/cell_flower"
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]